--- a/pom.xml
+++ b/pom.xml
@@ -2,37 +2,15 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.rickcee</groupId>
+	<groupId>net.rickcee.jdcompare</groupId>
 	<artifactId>jdcompare</artifactId>
 	<packaging>war</packaging>
-	<version>2.0.0</version>
+	<version>3.0.0</version>
 
 	<name>jDCompare</name>
 	<description>jDatabase Compare</description>
 	<inceptionYear>2010</inceptionYear>
 	<url>https://rickcee.net</url>
-
-	<issueManagement>
-		<system>Jira</system>
-		<url>http://bittersweetjava.com.ar/jira</url>
-	</issueManagement>
-
-	<scm>
-		<connection>
-			scm:svn:http://bittersweetjava.com.ar/svn/jDCompare/trunk
-		</connection>
-		<developerConnection>
-			scm:svn:http://bittersweetjava.com.ar/svn/jDCompare/trunk
-		</developerConnection>
-		<url>
-			scm:svn:http://bittersweetjava.com.ar/svn/jDCompare/trunk
-		</url>
-	</scm>
-
-	<ciManagement>
-		<system>Continuum</system>
-		<url>http://bittersweetjava.com.ar/continuum</url>
-	</ciManagement>
 
 	<licenses>
 		<license>
@@ -59,57 +37,79 @@
 	</developers>
 	
 	<properties>
-		<org.springframework.version>5.0.3.RELEASE</org.springframework.version>
-		<org.hibernate.version>5.2.13.Final</org.hibernate.version>
+		<org.hibernate.version>5.6.9.Final</org.hibernate.version>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
 	</properties>
 
+<parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.2.2</version>
+</parent>
+
 	<dependencies>
-		<!-- logging -->
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.13</version>
-		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.4</version>
-			<scope>provided</scope>
 		</dependency>
-
+		-->
+    <dependency>
+        <groupId>jakarta.servlet</groupId>
+        <artifactId>jakarta.servlet-api</artifactId>
+        <version>6.1.0</version>
+    </dependency>
+    
+<dependency>
+    <groupId>jakarta.servlet.jsp</groupId>
+    <artifactId>jakarta.servlet.jsp-api</artifactId>
+    <version>4.0.0</version>
+</dependency>
+<dependency>
+    <groupId>jakarta.servlet.jsp.jstl</groupId>
+    <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+    <version>3.0.2</version>
+</dependency>
+    <dependency>
+        <groupId>org.glassfish.web</groupId>
+        <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+        <version>3.0.1</version>
+    </dependency>
+    
+<!--
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jsp-api</artifactId>
 			<version>2.0</version>
-			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.1.2</version>
-			<scope>compile</scope>
+			<version>1.2</version>
 		</dependency>
+-->
 
+<!--
 		<dependency>
 			<groupId>taglibs</groupId>
 			<artifactId>standard</artifactId>
 			<version>1.1.2</version>
-			<scope>compile</scope>
 		</dependency>
-
+-->
+<!--
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>3.1.12</version>
 		</dependency>
+-->
 
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.hibernate</groupId> -->
@@ -122,11 +122,13 @@
 <!-- 			<artifactId>hibernate-annotations</artifactId> -->
 <!-- 			<version>${org.hibernate.version}</version> -->
 <!-- 		</dependency> -->
+<!--
 		<dependency>
 		    <groupId>org.hibernate</groupId>
 		    <artifactId>hibernate-entitymanager</artifactId>
 		    <version>${org.hibernate.version}</version>
 		</dependency>
+-->
 
 		<dependency>
 			<groupId>javax.persistence</groupId>
@@ -151,6 +153,7 @@
 <!-- 			<artifactId>spring-webmvc</artifactId> -->
 <!-- 			<version>${org.springframework.version}</version> -->
 <!-- 		</dependency> -->
+<!--
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-webmvc</artifactId>
@@ -165,12 +168,13 @@
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-orm</artifactId>
 		    <version>${org.springframework.version}</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
-			<version>10.5.3.0_1</version>
 		</dependency>
+
+-->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
@@ -186,7 +190,6 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.2.135</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.transaction</groupId>
@@ -197,19 +200,16 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.9.4</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.4</version>
 		</dependency>
 		
 		<dependency>
 		    <groupId>com.fasterxml.jackson.datatype</groupId>
 		    <artifactId>jackson-datatype-hibernate4</artifactId>
-		    <version>2.9.4</version>
 		</dependency>
 
 		<dependency>
@@ -217,8 +217,42 @@
 		    <artifactId>validation-api</artifactId>
 		    <version>1.1.0.Final</version>
 		</dependency>
-				
+
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-web</artifactId>
+</dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.tomcat.embed</groupId>
+    <artifactId>tomcat-embed-jasper</artifactId>
+</dependency>
+
+<!-- API, java.xml.bind module -->
+<dependency>
+    <groupId>jakarta.xml.bind</groupId>
+    <artifactId>jakarta.xml.bind-api</artifactId>
+</dependency>
+
+<!-- Runtime, com.sun.xml.bind module -->
+<dependency>
+    <groupId>org.glassfish.jaxb</groupId>
+    <artifactId>jaxb-runtime</artifactId>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+</dependency>
+
+
 	</dependencies>
+
 	<build>
 		<outputDirectory>
 			src/main/webapp/WEB-INF/classes
@@ -257,6 +291,7 @@
 		</plugins>
 	</build>
 
+<!--
 	<reporting>
 		<plugins>
 			<plugin>
@@ -289,10 +324,7 @@
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.3</version>
 			</plugin>
-			<!--
-				<plugin> <groupId>org.codehaus.mojo</groupId>
-				<artifactId>findbugs-maven-plugin</artifactId> </plugin>
-			-->
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
@@ -321,6 +353,7 @@
 			<url>file:/var/www/sites/${project.name}</url>
 		</site>
 	</distributionManagement>
+-->
 
 	<repositories>
 		<repository>
